--- a/wine_quality_prediction.ipynb
+++ b/wine_quality_prediction.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = pd.read_csv('C://Users//Shri/Wine_Quality_Prediction/winequality-white.csv', sep=';')"
+    "a = pd.read_csv('https://github.com/kushalnavghare/wine-quality-prediction/winequality-white.csv', sep=';')"
    ]
   },
   {
